# distance_routing

./: .gitignore  README.md  min_distance.py  opt_taxicab_high_fixed.py  opt_taxicab_high_gravity.py  opt_taxicab_storage.py  opt_taxicab_w_cost.py  puntos.txt  pyproject.toml  ruta_abierta.txt  ruta_cerrada.txt  solucion_bodega_mst.txt
output/: solucion_bodega_monotona_y.txt
src/distance_routing/: __init__.py  __main__.py  candidates.py  cli.py  geometry.py  io_utils.py  routing.py  types.py  visualization.py  warehouse.py
tests/: test_algorithms.py  test_cli.py  test_io_utils.py
