[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "distance-routing"
version = "0.1.0"
description = "Optimizaciones de rutas y bodegas con distancia Manhattan en 3D"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
]

[project.scripts]
distance-routing = "distance_routing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
